Allow sending unspecified kubernetes events

--- a/charts/datadog/templates/_kubernetes_apiserver_config.yaml
+++ b/charts/datadog/templates/_kubernetes_apiserver_config.yaml
@@ -4,6 +4,7 @@ kubernetes_apiserver.yaml: |-
   init_config:
   instances:
     - unbundle_events: {{ .Values.datadog.kubernetesEvents.unbundleEvents }}
+      bundle_unspecified_events: {{ .Values.datadog.kubernetesEvents.bundleUnspecifiedEvents }}
       collected_event_types:
 {{ .Values.datadog.kubernetesEvents.collectedEventTypes | toYaml | nindent 8 }}
 {{- end -}}
