--- a/charts/datadog/values.yaml
+++ b/charts/datadog/values.yaml
@@ -371,6 +371,8 @@ datadog:
   kubernetesEvents:
     # datadog.kubernetesEvents.unbundleEvents -- Allow unbundling kubernetes events, 1:1 mapping between Kubernetes and Datadog events. (Requires Cluster Agent 7.42.0+).
     unbundleEvents: false
+    # datadog.kubernetesEvents.bundleUnspecifiedEvents -- Allow bundling unspecified kubernetes events (Requires Cluster Agent 7.42.0+).
+    bundleUnspecifiedEvents: false
     # datadog.kubernetesEvents.collectedEventTypes -- Event types to be collected. This requires datadog.kubernetesEvents.unbundleEvents to be set to true.
     collectedEventTypes:
     # - kind: <kubernetes resource kind> # (optional if `source`` is provided)
